# gnucash-stock-quotes

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile.dashboard  README.md  docker-compose.yml  indexes.json  pyproject.toml  runner.sh  tickers.json  tickers1.json
alphavantage/: db_utils.py  quotes.py
analyzer/: correlations.py  gnucash.py  plots.py
coinbase/: report.py
dashboard/: app.py  db.py
dashboard/pages/: compare.py  correlations.py  index_browser.py  stock_browser.py
indexes/: asset_index.py  ffiv_index.py
market_indexes/: asset_index.py  portfolio.py
tests/: test_asset_index.py  test_dashboard_db.py  test_dashboard_pages.py  test_db_utils.py  test_gnucash.py  test_plots.py  test_portfolio.py  test_quotes.py
