[project]
name = "gnucash-stock-quotes"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Hendrickson",email = "scott@drskippy.net"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "plotly (>=5.0,<6.0)",
    "dash (>=2.17,<3.0)",
    "dash-bootstrap-components (>=1.6,<2.0)",
    "gunicorn (>=22.0,<24.0)"
]


[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
